--- a/_posts/2014-07-13-project-6.markdown
+++ b/_posts/2014-07-13-project-6.markdown
@@ -4,7 +4,7 @@ subtitle: Graphic Design
 layout: default
 modal-id: 6
 date: 2014-07-15
-img: roundicons.png
+img: portfolio_placeholder.jpg
 thumbnail: portfolio_placeholder.jpg
 alt: image-alt
 project-date: April 2014
