--- a/_posts/2014-07-15-project-4.markdown
+++ b/_posts/2014-07-15-project-4.markdown
@@ -4,7 +4,7 @@ subtitle: Website Design
 layout: default
 modal-id: 4
 date: 2014-07-15
-img: treehouse.png
+img: portfolio_placeholder.jpg
 thumbnail: portfolio_placeholder.jpg
 alt: image-alt
 project-date: April 2014
