--- a/_posts/2014-07-17-project-2.markdown
+++ b/_posts/2014-07-17-project-2.markdown
@@ -4,7 +4,7 @@ subtitle: Website Design
 layout: default
 modal-id: 2
 date: 2014-07-17
-img: escape.png
+img: portfolio_placeholder.jpg
 thumbnail: portfolio_placeholder.jpg
 alt: image-alt
 project-date: April 2014
