Setup first post

--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -1,15 +1,19 @@
 ---
-title: Dreams
-subtitle: Website Design
+title: Schreiben und Lesen im Zeichen des Todes
+subtitle: Literary Studies
 layout: default
 modal-id: 1
-date: 2014-07-18
-img: portfolio_placeholder.jpg
-thumbnail: portfolio_placeholder.jpg
+date: 2017-03-01
+img: publications/IMG_7858.jpg
+thumbnail: publications/IMG_7858.jpg
 alt: image-alt
-project-date: April 2014
+project-date: May 2016
 site-section: publications
-category: Web Development
-description: Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.
-
+category: Literary Studies
 ---
+
+Nelly Sachs wurde für ihre Gedichte und szenischen Arbeiten vielfach ausgezeichnet. Kaum bekannt ist jedoch, dass sie bis ins hohe Alter Prosatexte verfasste, die als Schlüssel zu ihrem Spätwerk gelten können.
+
+Die Studie bietet die erste wissenschaftliche Erfassung und Analyse des späten Prosawerks (1950–1967). Auf Grundlage von ausgiebigen Archivrecherchen in Deutschland und Schweden wurde ein Werkkorpus definiert und über die Frage nach einer in der späten Prosa entwickelten Poetik für zukünftige Lektüren des Gesamtwerks der Dichterin produktiv gemacht.
+
+Ersichtlich wird so etwa die Bedeutung des Todes der Mutter für Sachs’ Schreiben, die komplexen Beziehungen zu anderen Autoren und die in ihren Reden geäußerte Kritik an der Rezeption ihrer Werke. Mit vielen bisher unveröffentlichten Texten und Dokumenten aus dem Nachlass füllt die Studie wesentliche Lücken der bisherigen Forschung und entwirft neue Ansätze für zukünftige Beschäftigungen mit dem Werk von Nelly Sachs.
