--- a/_posts/2014-07-14-project-5.markdown
+++ b/_posts/2014-07-14-project-5.markdown
@@ -4,8 +4,8 @@ subtitle: Website Design
 layout: default
 modal-id: 5
 date: 2014-07-14
-img: portfolio_placeholder.jpg
-thumbnail: portfolio_placeholder.jpg
+img: publications/portfolio_placeholder.jpg
+thumbnail: publications/portfolio_placeholder.jpg
 alt: image-alt
 project-date: April 2014
 site-section: portfolio
